--- a/exercicio.html
+++ b/exercicio.html
@@ -263,7 +263,7 @@
     <nav>
       <a href="index.html">📈 Selecionar</a>
       <a href="exercicio.html">📝 Exercícios</a>
-      <a href="jogo.html">🎨 Jogos</a>
+      <a href="jogo.html">🎮 Jogos</a>
       <a href="chat.html">💬 Chat</a>
     </nav>
     <div class="mascote">🐻 Dimitry</div>
@@ -346,14 +346,14 @@
         title: "📝 Exercício Interativo",
         footer: "© 2025 Славянский клуб — Aprenda Russo e Português com diversão!",
         backBtn: "🔙 Voltar",
-        nav: ["📈 Selecionar", "📝 Exercícios", "🎨 Jogos", "💬 Chat"],
+        nav: ["📈 Selecionar", "📝 Exercícios", "🎮 Jogos", "💬 Chat"],
         mascot: "🐻 Dimitry"
       },
       ru: {
         title: "📝 Интерактивное упражнение",
         footer: "© 2025 Славянский клуб — Учите русский и португальский с удовольствием!",
         backBtn: "🔙 Назад",
-        nav: ["📈 Выбор", "📝 Упражнения", "🎨 Игры", "💬 Чат"],
+        nav: ["📈 Выбор", "📝 Упражнения", "🎮 Игры", "💬 Чат"],
         mascot: "🐻 Димитрий"
       }
     };
@@ -381,3 +381,4 @@
   </script>
 </body>
 </html>
+
