--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@ body.dark-mode footer {
     <a href="index.html">📈 Selecionar</a>
     <a href="exercicio.html">📝 Exercícios</a>
     <a href="jogo.html">🎮 Jogos</a>
+    <a href="complete-a-frase.html">🧩 Complete a Frase</a>
     <a href="chat.html">💬 Chat</a>
   </nav>
   <div class="mascote"> Dimitry</div>
@@ -789,6 +790,7 @@ modoBtn.addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
 
