--- a/exercicio.html
+++ b/exercicio.html
@@ -264,6 +264,7 @@
       <a href="index.html">📈 Selecionar</a>
       <a href="exercicio.html">📝 Exercícios</a>
       <a href="jogo.html">🎮 Jogos</a>
+      <a href="complete-a-frase.html">🧩 Complete a Frase</a>
       <a href="chat.html">💬 Chat</a>
     </nav>
     <div class="mascote">🐻 Dimitry</div>
@@ -381,4 +382,5 @@
   </script>
 </body>
 </html>
+
 
