--- a/exercicio.html
+++ b/exercicio.html
@@ -347,14 +347,14 @@
         title: "📝 Exercício Interativo",
         footer: "© 2025 Славянский клуб — Aprenda Russo e Português com diversão!",
         backBtn: "🔙 Voltar",
-        nav: ["📈 Selecionar", "📝 Exercícios", "🎮 Jogos", "💬 Chat"],
+        nav: ["📈 Selecionar", "📝 Exercícios", "🎮 Jogos", "🧩 Complete a Frase", "💬 Chat"],
         mascot: "🐻 Dimitry"
       },
       ru: {
         title: "📝 Интерактивное упражнение",
         footer: "© 2025 Славянский клуб — Учите русский и португальский с удовольствием!",
         backBtn: "🔙 Назад",
-        nav: ["📈 Выбор", "📝 Упражнения", "🎮 Игры", "💬 Чат"],
+        nav: ["📈 Выбор", "📝 Упражнения", "🎮 Игры", "🧩 Закончить фразу", "💬 Чат"],
         mascot: "🐻 Димитрий"
       }
     };
@@ -382,6 +382,7 @@
   </script>
 </body>
 </html>
+
 
 
 
