--- a/chat.html
+++ b/chat.html
@@ -17,6 +17,7 @@
   --color-primary-hover:#45a049;
   --color-name:#1976d2;
 }
+/* ====== Seu CSS original permanece ===== */
 *{box-sizing:border-box;margin:0;padding:0;}
 html,body{height:100%;font-family:Arial,sans-serif;background:var(--color-bg-light);}
 header{background:#fff;padding:10px;border-bottom:1px solid #ddd;z-index:100;display:flex;align-items:center;gap:8px;justify-content:space-between;}
@@ -28,6 +29,8 @@ header h1{display:flex;align-items:center;gap:8px;color:var(--color-primary);fon
 .userItemMobile{width:50px;height:50px;border-radius:50%;overflow:hidden;display:inline-block;margin-right:6px;border:2px solid transparent;cursor:pointer;transition:transform .2s;position:relative;}
 .userItemMobile img{width:100%;height:100%;border-radius:50%;object-fit:cover;}
 .userItemMobile:hover{border-color:var(--color-primary);transform:scale(1.1);}
+.alert-dot{position:absolute;top:0;right:0;width:12px;height:12px;background:red;border-radius:50%;animation:blink 1s infinite;}
+@keyframes blink{50%{opacity:0;}}
 #currentPartner{font-weight:bold;color:var(--color-name);}
 #mainContent{display:flex;flex:1;overflow:hidden;height:calc(100vh - 108px);}
 #userList{width:200px;background:#fff;border-right:1px solid #ddd;overflow-y:auto;padding:8px;}
@@ -37,8 +40,7 @@ header h1{display:flex;align-items:center;gap:8px;color:var(--color-primary);fon
 #chatContainer{flex:1;display:flex;flex-direction:column;overflow:hidden;position:relative;}
 #chatHeader{display:flex;justify-content:space-between;align-items:center;padding:6px 10px;border-bottom:1px solid #ddd;background:#fafafa;position:relative;gap:4px;}
 #chatWindow{flex:1;overflow-y:auto;padding:6px;background:white;}
-.msg{margin:4px 0;padding:6px;border-radius:8px;max-width:80%;word-wrap:break-word;position:relative;}
-.msg button{position:absolute;top:2px;right:2px;background:red;color:white;border:none;padding:2px 6px;border-radius:4px;font-size:0.7em;cursor:pointer;}
+.msg{margin:4px 0;padding:6px;border-radius:8px;max-width:80%;word-wrap:break-word;}
 .userMsg{background:#e0f7e9;align-self:flex-end;text-align:right;}
 .otherMsg{background:#fff8dc;align-self:flex-start;text-align:left;}
 #chatInput{display:flex;border-top:1px solid #ddd;background:white;padding:4px;}
@@ -47,16 +49,13 @@ header h1{display:flex;align-items:center;gap:8px;color:var(--color-primary);fon
 #chatInput button:hover{background:var(--color-primary-hover);}
 #adSidebar{width:280px;background:#f1f1f1;border-left:1px dashed #ccc;padding:8px;text-align:center;overflow-y:auto;}
 footer{background:white;color:#555;text-align:center;padding:6px;font-size:.85em;border-top:1px solid #ddd;}
-
-/* BOTÕES MENORES */
+/* ===== Botões desktop e mobile ===== */
 .desktopControls { display:flex; gap:6px; }
 .desktopControls button { padding:4px 8px; font-size:0.85em; border:none; border-radius:5px; cursor:pointer; color:#fff; }
 #hideChatBtnDesktop{background:red;}
 #blockBtnDesktop{background:var(--color-primary);}
-
-/* MOBILE */
-.mobileControlArea{display:none;position:fixed;bottom:100px;left:0;right:0;background:white;padding:4px;display:flex;gap:4px;z-index:80;}
-.mobileControlArea button{flex:1;padding:8px;font-size:1em;border:none;border-radius:5px;cursor:pointer;}
+.mobileControlArea{ display:none; position:fixed; bottom:100px; left:0; right:0; background:white; padding:4px; display:flex; gap:4px; z-index:80; }
+.mobileControlArea button{ flex:1; padding:8px; font-size:1em; border:none; border-radius:5px; cursor:pointer; }
 #hideChatBtnMobile{background:red;color:white;}
 #blockBtnMobile{background:var(--color-primary);color:white;}
 @media(max-width:768px){
@@ -101,6 +100,7 @@ footer{background:white;color:#555;text-align:center;padding:6px;font-size:.85em
 
     <div id="chatWindow"></div>
 
+    <!-- Botões Mobile -->
     <div class="mobileControlArea">
       <button id="hideChatBtnMobile">Apagar chat</button>
       <button id="blockBtnMobile">Bloquear</button>
@@ -117,18 +117,16 @@ footer{background:white;color:#555;text-align:center;padding:6px;font-size:.85em
 <footer>© 2025 Славянский клуб — Aprenda Russo e Português com diversão!</footer>
 
 <script>
-const firebaseConfig={
-  apiKey:"AIzaSyCYJCgfil5HKrCWtB14zwdicDaEcldHU6A",
-  authDomain:"dimitry-rusian.firebaseapp.com",
-  databaseURL:"https://dimitry-rusian-default-rtdb.firebaseio.com",
-  projectId:"dimitry-rusian",
-  storageBucket:"dimitry-rusian.appspot.com",
-  messagingSenderId:"449029666805",
-  appId:"1:449029666805:web:feaf575a7b7e6f234a52bc"
-};
+/* === CONFIG FIREBASE === */
+const firebaseConfig={apiKey:"AIzaSyCYJCgfil5HKrCWtB14zwdicDaEcldHU6A",
+authDomain:"dimitry-rusian.firebaseapp.com",
+databaseURL:"https://dimitry-rusian-default-rtdb.firebaseio.com",
+projectId:"dimitry-rusian",storageBucket:"dimitry-rusian.appspot.com",
+messagingSenderId:"449029666805",appId:"1:449029666805:web:feaf575a7b7e6f234a52bc"};
 firebase.initializeApp(firebaseConfig);
 const auth=firebase.auth(),db=firebase.database();
 
+/* === ELEMENTOS === */
 const loginBtn=document.getElementById("loginBtn"),logoutBtn=document.getElementById("logoutBtn"),
 msgInput=document.getElementById("msgInput"),sendBtn=document.getElementById("sendBtn"),
 chatWindow=document.getElementById("chatWindow"),userList=document.getElementById("userList"),
@@ -139,116 +137,133 @@ onlineCount=document.getElementById("onlineCount");
 
 let userData={},currentChat="chatGlobal",currentPartnerUID=null,blocked={},hidden={};
 
-/* LOGIN */
+/* === LOGIN === */
 loginBtn.onclick=()=>auth.signInWithPopup(new firebase.auth.GoogleAuthProvider());
 logoutBtn.onclick=()=>auth.signOut();
 
 auth.onAuthStateChanged(u=>{
-  if(u){
-    userData={uid:u.uid,name:u.displayName,photo:u.photoURL};
-    loginBtn.style.display="none";logoutBtn.style.display="inline-block";
-    msgInput.disabled=false;sendBtn.disabled=false;
-    db.ref("online/"+u.uid).set({name:u.displayName,photo:u.photoURL});
-    db.ref("online/"+u.uid).onDisconnect().remove();
-    loadBlocked();
-    updateUsers();
-    startGlobal();
-  } else {
-    userData={};msgInput.disabled=true;sendBtn.disabled=true;
-    loginBtn.style.display="inline-block";logoutBtn.style.display="none";
-    startGlobal();
-  }
+ if(u){
+  userData={uid:u.uid,name:u.displayName,photo:u.photoURL};
+  loginBtn.style.display="none";logoutBtn.style.display="inline-block";
+  msgInput.disabled=false;sendBtn.disabled=false;
+
+  // Online e permanente
+  db.ref("online/"+u.uid).set({name:u.displayName,photo:u.photoURL});
+  db.ref("online/"+u.uid).onDisconnect().remove();
+  db.ref("usuariosConectados/"+u.uid).set({name:u.displayName,photo:u.photoURL});
+
+  loadBlocked();
+  updateUsers();
+  startGlobal();
+ }else{
+  userData={};msgInput.disabled=true;sendBtn.disabled=true;
+  loginBtn.style.display="inline-block";logoutBtn.style.display="none";
+  startGlobal();
+ }
 });
 
-/* BLOQUEAR */
+/* === BLOQUEIO CORRIGIDO (invertido) === */
 async function loadBlocked(){
-  if(!userData.uid)return;
-  const snap=await db.ref("blocked/"+userData.uid).once("value");
-  blocked=snap.val()||{};
+ if(!userData.uid) return;
+ const snap = await db.ref("blocked").once("value");
+ blocked = snap.val() || {};
 }
+
 function toggleBlock(){
-  if(!currentPartnerUID||!userData.uid)return;
-  const ref=db.ref(`blocked/${userData.uid}/${currentPartnerUID}`);
-  const btns=[blockBtnMobile,blockBtnDesktop];
-  if(blocked[currentPartnerUID]){
-    ref.remove();blocked[currentPartnerUID]=false;btns.forEach(b=>b.textContent="Bloquear");
-  } else {
-    ref.set(true);blocked[currentPartnerUID]=true;btns.forEach(b=>b.textContent="Desbloquear");
-  }
+ if(!currentPartnerUID||!userData.uid) return;
+ const ref = db.ref(`blocked/${currentPartnerUID}/${userData.uid}`);
+ const btns=[blockBtnMobile,blockBtnDesktop];
+ if(blocked[currentPartnerUID] && blocked[currentPartnerUID][userData.uid]){
+   ref.remove();
+   blocked[currentPartnerUID][userData.uid]=false;
+   btns.forEach(b=>b.textContent="Bloquear");
+ } else{
+   ref.set(true);
+   if(!blocked[currentPartnerUID]) blocked[currentPartnerUID]={};
+   blocked[currentPartnerUID][userData.uid]=true;
+   btns.forEach(b=>b.textContent="Desbloquear");
+ }
 }
 blockBtnMobile.onclick=toggleBlock;
 blockBtnDesktop.onclick=toggleBlock;
 
-/* LISTA DE USUÁRIOS */
+/* === LISTA DE USUÁRIOS ONLINE + PERMANENTES === */
 function updateUsers(){
-  db.ref("online").on("value",snap=>{
-    const users=snap.val()||{};
-    userList.innerHTML="";mobileUserLine.innerHTML="";
-    let count=0;
-    for(const [uid,u] of Object.entries(users)){
-      if(uid===userData.uid)continue;
-      count++;
-      const d=document.createElement("div");d.className="userItem";
-      d.innerHTML=`<img src="${u.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'}"><span>${u.name}</span>`;
-      d.onclick=()=>startPrivate(uid,u.name);userList.appendChild(d);
-      const m=document.createElement("div");m.className="userItemMobile";
-      m.innerHTML=`<img src="${u.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'}" title="${u.name}">`;
-      m.onclick=()=>startPrivate(uid,u.name);mobileUserLine.appendChild(m);
-    }
-    onlineCount.textContent="👥 Usuários online: "+count;
-  });
+ db.ref("usuariosConectados").on("value",snap=>{
+   const allUsers = snap.val()||{};
+   db.ref("online").once("value").then(onlineSnap=>{
+     const onlineUsers = onlineSnap.val()||{};
+     userList.innerHTML=""; mobileUserLine.innerHTML="";
+     let count=0;
+     for(const [uid,u] of Object.entries(allUsers)){
+       if(uid===userData.uid) continue;
+       const isOnline = !!onlineUsers[uid];
+       if(isOnline) count++;
+       const d=document.createElement("div");
+       d.className="userItem";
+       d.innerHTML=`<img src="${u.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'}"><span>${u.name}${isOnline?' 🟢':''}</span>`;
+       d.onclick=()=>startPrivate(uid,u.name);
+       userList.appendChild(d);
+       const m=document.createElement("div");
+       m.className="userItemMobile";
+       m.innerHTML=`<img src="${u.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'}" title="${u.name}${isOnline?' (Online)':''}">`;
+       m.onclick=()=>startPrivate(uid,u.name);
+       mobileUserLine.appendChild(m);
+     }
+     onlineCount.textContent="👥 Usuários online: "+count;
+   });
+ });
 }
 
-/* CHAT GLOBAL */
+/* === CHAT GLOBAL === */
 function startGlobal(){
-  currentChat="chatGlobal";currentPartnerUID=null;
-  currentPartnerEl.textContent="🌍 Global";chatWindow.innerHTML="";
-  db.ref("chatGlobal").off();
-  db.ref("chatGlobal").on("child_added",snap=>showMsg(snap.val(),"chatGlobal"));
+ currentChat="chatGlobal"; currentPartnerUID=null;
+ currentPartnerEl.textContent="🌍 Global"; chatWindow.innerHTML="";
+ db.ref("chatGlobal").off();
+ db.ref("chatGlobal").on("child_added",snap=>showMsg(snap.val(),"chatGlobal"));
 }
 
-/* CHAT PRIVADO */
+/* === CHAT PRIVADO === */
 function startPrivate(uid,name){
-  currentPartnerUID=uid;
-  currentChat=[userData.uid,uid].sort().join("_");
-  currentPartnerEl.textContent=name;chatWindow.innerHTML="";
-  const btns=[blockBtnMobile,blockBtnDesktop];
-  btns.forEach(b=>b.textContent=blocked[uid]?"Desbloquear":"Bloquear");
-  db.ref("private/"+currentChat).off();
-  db.ref("private/"+currentChat).on("child_added",snap=>showMsg(snap.val(),currentChat));
+ currentPartnerUID=uid; currentChat=[userData.uid,uid].sort().join("_");
+ currentPartnerEl.textContent=name; chatWindow.innerHTML="";
+ const btns=[blockBtnMobile,blockBtnDesktop];
+ btns.forEach(b=>b.textContent=(blocked[uid] && blocked[uid][userData.uid])?"Desbloquear":"Bloquear");
+ db.ref("private/"+currentChat).off();
+ db.ref("private/"+currentChat).on("child_added",snap=>showMsg(snap.val(),currentChat));
 }
 
-/* ENVIAR */
-sendBtn.onclick=sendMsg;
+/* === ENVIAR MENSAGEM === */
+sendBtn.onclick=()=>sendMsg();
 msgInput.addEventListener("keypress",e=>{if(e.key==="Enter")sendMsg();});
 function sendMsg(){
-  const text=msgInput.value.trim();if(!text)return;
-  if(currentPartnerUID&&blocked[currentPartnerUID]){alert("Você bloqueou este usuário.");return;}
-  const path=currentChat==="chatGlobal"?"chatGlobal":"private/"+currentChat;
-  db.ref(path).push({user:userData.name,uid:userData.uid,text,timestamp:Date.now()});
-  msgInput.value="";
+ const text=msgInput.value.trim(); if(!text) return;
+ if(currentPartnerUID && blocked[currentPartnerUID] && blocked[currentPartnerUID][userData.uid]){
+   alert("Este usuário bloqueou você e você não pode enviar mensagens.");
+   return;
+ }
+ const path=currentChat==="chatGlobal"?"chatGlobal":"private/"+currentChat;
+ db.ref(path).push({user:userData.name,uid:userData.uid,text,timestamp:Date.now()});
+ msgInput.value="";
 }
 
-/* MOSTRAR */
+/* === MOSTRAR MENSAGEM === */
 function showMsg(m,room){
-  if(room!=="chatGlobal"&&room!==currentChat)return;
-  if(hidden[currentChat])return;
-  const d=document.createElement("div");
-  d.className=m.uid===userData.uid?"msg userMsg":"msg otherMsg";
-  d.textContent=m.text;
-
-  if(m.uid===userData.uid){ // botão apagar local
-    const btn=document.createElement("button");btn.textContent="X";
-    btn.onclick=()=>{d.remove();};
-    d.appendChild(btn);
-  }
-
-  chatWindow.appendChild(d);
-  chatWindow.scrollTop=chatWindow.scrollHeight;
+ if(room!=="chatGlobal" && room!==currentChat) return;
+ if(hidden[currentChat]) return;
+ const d=document.createElement("div");
+ d.className=m.uid===userData.uid?"msg userMsg":"msg otherMsg";
+ d.textContent=m.text;
+ chatWindow.appendChild(d);
+ chatWindow.scrollTop=chatWindow.scrollHeight;
 }
 
-/* APAGAR CHAT LOCAL */
-function hideChat(){hidden[currentChat]=true;chatWindow.innerHTML="";}
+/* === APAGAR CHAT LOCAL === */
+function hideChat(){
+ hidden[currentChat]=true;
+ chatWindow.innerHTML="";
+ localStorage.setItem(`hidden_${userData.uid}_${currentChat}`,"1");
+}
 hideChatBtnMobile.onclick=hideChat;
 hideChatBtnDesktop.onclick=hideChat;
 </script>
