--- a/index.html
+++ b/index.html
@@ -292,25 +292,44 @@ body.dark-mode footer {
     font-size: 0.9em;
     padding: 6px 12px;
   }
+/* ===== HEADER FIXO ===== */
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  background: var(--header-bg, #fff);
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+}
 
+/* Corrige o deslocamento do conteúdo para não ficar escondido atrás do header */
+body {
+  margin: 0;
+  padding-top: 70px; /* altura do header */
+}
 
+/* ===== MENU (ASIDE) ===== */
+aside {
+  position: relative;
+  top: 0;
+  width: 100%;
+  background: transparent;
+  box-shadow: none;
+  margin: 0;
+  padding: 0;
+}
 
-
-
-/* ===== RESPONSIVIDADE: CELULAR ===== */
+/* ===== MENU HORIZONTAL NO CELULAR ===== */
 @media (max-width: 768px) {
-  /* Coloca o menu logo abaixo do header */
   aside {
-    position: relative;
-    top: 0;
-    width: 100%;
-    background: transparent;
-    box-shadow: none;
-    margin: 0;
-    padding: 0;
+    position: fixed;
+    top: 70px; /* logo abaixo do header fixo */
+    left: 0;
+    right: 0;
+    z-index: 999;
   }
 
-  /* Menu horizontal com rolagem */
   aside nav {
     display: flex !important;
     flex-direction: row !important;
@@ -323,7 +342,6 @@ body.dark-mode footer {
     border-bottom: 1px solid #ddd;
   }
 
-  /* Botões menores */
   aside nav a {
     flex: 0 0 auto;
     display: inline-flex;
@@ -341,7 +359,6 @@ body.dark-mode footer {
   aside nav a:hover {
     background: #4CAF50;
     color: white;
-    transform: none;
   }
 
   aside nav a.active {
@@ -349,12 +366,17 @@ body.dark-mode footer {
     color: white;
   }
 
-  /* Esconde o mascote no celular (ou reduz se quiser mostrar pequeno) */
+  /* Ajusta o conteúdo para não ficar escondido atrás do menu fixo */
+  main {
+    padding-top: 110px; /* header (70px) + menu (40px) */
+  }
+
+  /* Esconde o mascote no celular */
   .mascote {
     display: none;
   }
 
-  /* Ajuste para dark mode */
+  /* Dark mode */
   body.dark-mode aside nav {
     background: #121212;
     border-bottom: 1px solid #333;
@@ -371,22 +393,12 @@ body.dark-mode footer {
     background: #4CAF50;
     color: white;
   }
-
-  /* Rolagem lateral suave */
-  aside nav::-webkit-scrollbar {
-    height: 6px;
-  }
-
-  aside nav::-webkit-scrollbar-thumb {
-    background: rgba(0,0,0,0.2);
-    border-radius: 3px;
-  }
-
-
-
-
-
 }
+
+
+
+
+
 
 
 
@@ -1056,6 +1068,7 @@ modoBtn.addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
 
